--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
 
         function preload() {
             font = loadFont('MusicNotes.otf');
-            // font = loadFont('https://github.com/CuriousCI/music-notes-font/blob/master/MusicNotes.otf?raw=true');
         }
 
         function setup() {
@@ -194,6 +193,14 @@
             }
         }
     </script>
+
+    <style>
+        body {
+            margin: unset;
+            border: unset;
+            padding: unset;
+        }
+    </style>
 
     <title></title>
 </head>
