--- a/index.html
+++ b/index.html
@@ -3,172 +3,8 @@
 
 <head>
     <script src="./dependencies/p5.min.js"></script>
-    <script>
-        function Vehicle(x, y) {
-            this.position = createVector(random(width), random(height));
-            this.target = createVector(x, y);
-            this.velocity = p5.Vector.random2D();
-            this.acceleration = createVector();
-            this.radius = random(3, 7);
-            this.maxSpeed = 10;
-            this.maxForce = 1;
-        }
-
-        Vehicle.prototype.behaviors = function () {
-            let arrive = this.arrive(this.target);
-            // let mouse = createVector(mouseX, mouseY);
-            // let flee = this.flee(mouse);
-
-            arrive.mult(1);
-            // flee.mult(5);
-
-            this.applyForce(arrive);
-            // this.applyForce(flee);
-        }
-
-        Vehicle.prototype.applyForce = function (force) {
-            this.acceleration.add(force);
-        }
-
-        Vehicle.prototype.update = function () {
-            this.position.add(this.velocity);
-            this.velocity.add(this.acceleration);
-            this.acceleration.mult(0);
-        }
-
-        Vehicle.prototype.show = function () {
-            const strokeColor = lerpColor(
-                color(163, 134, 131),
-                color(221, 149, 68),
-                map(this.position.y, 50, 300, 0, 1)
-            );
-            stroke(strokeColor);
-            strokeWeight(this.radius);
-            point(this.position.x, this.position.y);
-        }
-
-
-        Vehicle.prototype.arrive = function (target) {
-            let desiredPosition = p5.Vector.sub(target, this.position);
-            let desiredMagnitude = desiredPosition.mag();
-            let speed = this.maxSpeed;
-            if (desiredMagnitude < 100) {
-                speed = map(desiredMagnitude, 0, 100, 0, this.maxSpeed);
-            }
-            desiredPosition.setMag(speed);
-            let steer = p5.Vector.sub(desiredPosition, this.velocity);
-            steer.limit(this.maxForce);
-            return steer;
-        }
-
-        Vehicle.prototype.flee = function (target) {
-            let desiredPosition = p5.Vector.sub(target, this.position);
-            let desiredMagnitude = desiredPosition.mag();
-            if (desiredMagnitude < 50) {
-                desiredPosition.setMag(this.maxSpeed);
-                desiredPosition.mult(-1);
-                let steer = p5.Vector.sub(desiredPosition, this.velocity);
-                steer.limit(this.maxForce);
-                return steer;
-            } else {
-                return createVector(0, 0);
-            }
-        }
-
-        Vehicle.prototype.clone = function () {
-            let vehicle = new Vehicle(this.position.x, this.position.y);
-
-            vehicle.position.x = this.position.x;
-            vehicle.position.y = this.position.y;
-
-            vehicle.velocity.x = this.velocity.x;
-            vehicle.velocity.y = this.velocity.y;
-
-            vehicle.acceleration.x = this.acceleration.x;
-            vehicle.acceleration.y = this.acceleration.y;
-
-            return vehicle;
-        }
-
-
-        let font;
-        let particles = [];
-        let timer = 0;
-        const maxChangeForce = 20;
-
-        function preload() {
-            font = loadFont('MusicNotes.otf');
-        }
-
-        function setup() {
-            createCanvas(900, 350);
-            clear();
-
-            getPoints("b", 150).forEach(point => {
-                particles.push(new Vehicle(point.x, point.y));
-            });
-        }
-
-        function draw() {
-            clear();
-
-            timer++;
-
-            if (timer == 180) {
-                updateParticles();
-                timer = 0;
-            }
-
-            particles.forEach(vehicle => {
-                vehicle.behaviors();
-                vehicle.update();
-                vehicle.show();
-            });
-        }
-
-        function getPoints(text, textSize) {
-            const bounds = font.textBounds(text, 0, 0, textSize);
-            const x = width / 2 - bounds.w / 2;
-            const y = height / 2 - bounds.h / 2;
-
-            return font.textToPoints(text, x, y + 100, textSize, {
-                sampleFactor: 0.1
-            });
-        }
-
-        function getRandomText() {
-            const letters = "abefhpqrtwxyAEHSTZ"
-            const textWidth = random(4, 5);
-            let text = '';
-            for (let _ = 0; _ < textWidth; _++) {
-                text += `${letters[floor(random(letters.length))]} `;
-            }
-            return text;
-        }
-
-        function updateParticles() {
-            const points = getPoints(getRandomText(), 150);
-
-            if (points.length < particles.length) {
-                let toSplice = particles.length - points.length;
-                particles.splice(points.length - 1, toSplice);
-            } else if (points.length > particles.length) {
-                for (let index = particles.length; index < points.length; index++) {
-                    const particle = particles[index - particles.length].clone();
-                    particles.push(particle);
-                }
-            }
-
-            points.forEach((point, index) => {
-                particles[index].target = createVector(point.x, point.y);
-
-                let force = p5.Vector.random2D();
-                force.mult(random(maxChangeForce));
-                particles[index].applyForce(force);
-            });
-        }
-    </script>
-
+    <script src="./script/particle.js"></script>
+    <script src="./script/main.js"></script>
     <style>
         body {
             margin: unset;
