--- a/index.html
+++ b/index.html
@@ -5,6 +5,42 @@
     <script src="./dependencies/p5.min.js"></script>
     <script src="./script/particle.js"></script>
     <script src="./script/main.js"></script>
+    <script>
+        let font;
+        let particles = [];
+        let timer = 0;
+        const maxChangeForce = 20;
+
+        function preload() {
+            font = loadFont("MusicNotes.otf");
+        }
+
+        function setup() {
+            createCanvas(900, 350);
+            clear();
+
+            getPoints("b", 150).forEach(point => {
+                particles.push(new Particle(point.x, point.y));
+            });
+        }
+
+        function draw() {
+            clear();
+
+            timer++;
+
+            if (timer == 180) {
+                updateParticles();
+                timer = 0;
+            }
+
+            particles.forEach(particle => {
+                particle.behaviors();
+                particle.update();
+                particle.show();
+            });
+        }
+    </script>
     <style>
         body {
             margin: unset;
@@ -12,7 +48,6 @@
             padding: unset;
         }
     </style>
-
     <title></title>
 </head>
 
